--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "url": "https://github.com/ArcieL0/Project-BaackEnd/issues"
   },
   "homepage": "https://github.com/ArcieL0/Project-BaackEnd#readme",
-  "dependencies": {
+  "devDependencies": {
     "@ljharb/tsconfig": "^0.3.2"
   }
 }
